// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`forms of payment > codes: the TMC's GDS entries and payment types 1`] = `
{
  "gdsEntries": [
    {
      "active": true,
      "code": "CC",
      "id": "e5d8cee3-acbe-40ac-bdb2-63192a1eb679",
      "label": "Credit card - passed through to the airline",
    },
    {
      "active": true,
      "code": "INVAGT",
      "id": "f8e8b856-8db5-4e1c-a0a5-2ebd8fcce670",
      "label": "Agency invoice - agency settles, card charged separately",
    },
  ],
  "ok": true,
  "paymentTypes": [
    {
      "active": true,
      "code": "CC",
      "id": "4ae92f29-23ec-40b2-bc87-5f9d8fdf00bc",
      "label": "Credit card",
      "requires_card": true,
    },
    {
      "active": true,
      "code": "CL",
      "id": "064ba03b-3023-44fc-a3bb-ba6013570da7",
      "label": "Credit limit",
      "requires_card": false,
    },
  ],
}
`;

exports[`forms of payment > create: a traveller card for this TMC's traveller, set as the default 1`] = `
{
  "fop": {
    "active": true,
    "airline_code": "AI",
    "branch_id": "8cd02caa-4e8e-4a62-9a33-797827a75f55",
    "card_type": "VI",
    "created_at": "<db time>",
    "description": "Visa ···· 4242 · exp 12/30",
    "expiry_month": 12,
    "expiry_year": 2030,
    "fop_code": null,
    "fop_type": "card",
    "gds_alias": null,
    "gds_entry_id": null,
    "id": "<road warrior>",
    "is_default": true,
    "label": "Road warrior",
    "last4": "4242",
    "notes": null,
    "owner_client_id": null,
    "owner_employee_id": "6052570d-8f27-47f8-8b1f-98686fc6b098",
    "payer": "traveller",
    "payment_type_id": "4ae92f29-23ec-40b2-bc87-5f9d8fdf00bc",
    "rbd_spec": "Y,B",
    "status": "active",
  },
  "ok": true,
}
`;

exports[`forms of payment > list: the TMC sees every form of payment, described and with status 1`] = `
{
  "items": [
    {
      "active": true,
      "airline_code": "AA",
      "branch_id": "8cd02caa-4e8e-4a62-9a33-797827a75f55",
      "card_type": null,
      "created_at": "2026-09-07T10:03:39.974Z",
      "description": "Cash / BSP settlement",
      "expiry_month": null,
      "expiry_year": null,
      "fop_code": "1",
      "fop_type": "cash",
      "gds_alias": null,
      "gds_entry_id": "f8e8b856-8db5-4e1c-a0a5-2ebd8fcce670",
      "id": "fe7e1613-6ea6-451d-9f57-442de9fe7e1c",
      "is_default": false,
      "label": "AMEX_BCG_FOP_LIQUID",
      "last4": null,
      "notes": null,
      "owner_client_id": null,
      "owner_employee_id": null,
      "payer": "agency",
      "payment_type_id": null,
      "rbd_spec": "Y",
      "status": "active",
    },
    {
      "active": true,
      "airline_code": "AI",
      "branch_id": "8cd02caa-4e8e-4a62-9a33-797827a75f55",
      "card_type": "VI",
      "created_at": "2026-09-10T08:17:51.695Z",
      "description": "Visa ···· 1111 · exp 06/31",
      "expiry_month": 6,
      "expiry_year": 2031,
      "fop_code": "3",
      "fop_type": "card",
      "gds_alias": "black card",
      "gds_entry_id": "e5d8cee3-acbe-40ac-bdb2-63192a1eb679",
      "id": "5cdd5d0a-51cd-48f0-8916-24ae136c1b81",
      "is_default": false,
      "label": "BCG CORP BLACK CARD",
      "last4": "1111",
      "notes": null,
      "owner_client_id": "b5005d4e-b813-4f10-ae59-1b0f5257357e",
      "owner_employee_id": null,
      "payer": "corporate",
      "payment_type_id": "4ae92f29-23ec-40b2-bc87-5f9d8fdf00bc",
      "rbd_spec": "Y",
      "status": "active",
    },
    {
      "active": true,
      "airline_code": "AI",
      "branch_id": "8cd02caa-4e8e-4a62-9a33-797827a75f55",
      "card_type": "AX",
      "created_at": "2026-09-08T06:54:29.004Z",
      "description": "Amex ···· 1111 · exp 08/29",
      "expiry_month": 8,
      "expiry_year": 2029,
      "fop_code": "2",
      "fop_type": "card",
      "gds_alias": null,
      "gds_entry_id": "e5d8cee3-acbe-40ac-bdb2-63192a1eb679",
      "id": "e0e0a41c-7bb3-42eb-9ab6-2cd44a608f2d",
      "is_default": false,
      "label": "Credit AMEX",
      "last4": "1111",
      "notes": null,
      "owner_client_id": null,
      "owner_employee_id": null,
      "payer": "agency",
      "payment_type_id": "4ae92f29-23ec-40b2-bc87-5f9d8fdf00bc",
      "rbd_spec": "Y, B",
      "status": "active",
    },
  ],
  "ok": true,
  "page": 1,
  "pageSize": 10,
  "total": 3,
  "totalPages": 1,
}
`;

exports[`forms of payment > mappings: the flat list, searchable from either side 1`] = `
{
  "items": [
    {
      "created_at": "<db time>",
      "created_by_name": "Employee 281282",
      "fop_code": null,
      "fop_id": "<road warrior>",
      "fop_label": "Road warrior",
      "id": "<new mapping>",
      "is_active": true,
      "kind": "client",
      "target_id": "b5005d4e-b813-4f10-ae59-1b0f5257357e",
      "target_name": "BCG",
    },
    {
      "created_at": "<db time>",
      "created_by_name": "Employee 281282",
      "fop_code": null,
      "fop_id": "<road warrior>",
      "fop_label": "Road warrior",
      "id": "<new mapping>",
      "is_active": true,
      "kind": "bucket",
      "target_id": "327db3fc-c62d-4c94-81d8-0916227e7558",
      "target_name": "SMEs",
    },
    {
      "created_at": "2026-09-10T10:36:43.808Z",
      "created_by_name": "Employee 281282",
      "fop_code": "3",
      "fop_id": "5cdd5d0a-51cd-48f0-8916-24ae136c1b81",
      "fop_label": "BCG CORP BLACK CARD",
      "id": "8b998105-97be-420b-b8fe-c614eb034147",
      "is_active": true,
      "kind": "bucket",
      "target_id": "4fa30930-0973-4d12-a158-a4e606e0fcc5",
      "target_name": "kj",
    },
    {
      "created_at": "2026-09-08T10:21:48.070Z",
      "created_by_name": "Employee 281282",
      "fop_code": "2",
      "fop_id": "e0e0a41c-7bb3-42eb-9ab6-2cd44a608f2d",
      "fop_label": "Credit AMEX",
      "id": "60f9536e-2f63-45b4-aa66-8ce5d0d519a8",
      "is_active": true,
      "kind": "bucket",
      "target_id": "6f7ba956-97a4-4f1a-8f49-6d20fca39332",
      "target_name": "Corps with vibes",
    },
    {
      "created_at": "2026-09-08T10:21:17.517Z",
      "created_by_name": "Employee 281282",
      "fop_code": "1",
      "fop_id": "fe7e1613-6ea6-451d-9f57-442de9fe7e1c",
      "fop_label": "AMEX_BCG_FOP_LIQUID",
      "id": "44d78ca0-bc6e-4d5a-817c-b84ac9c9e7e6",
      "is_active": true,
      "kind": "bucket",
      "target_id": "327db3fc-c62d-4c94-81d8-0916227e7558",
      "target_name": "SMEs",
    },
  ],
  "ok": true,
  "page": 1,
  "pageSize": 10,
  "total": 5,
  "totalPages": 1,
}
`;

exports[`forms of payment > one: with its mappings named; hidden from another TMC 1`] = `
{
  "assignments": [
    {
      "id": "44d78ca0-bc6e-4d5a-817c-b84ac9c9e7e6",
      "is_active": true,
      "kind": "bucket",
      "targetId": "327db3fc-c62d-4c94-81d8-0916227e7558",
      "targetName": "SMEs",
    },
  ],
  "fop": {
    "active": true,
    "airline_code": "AA",
    "branch_id": "8cd02caa-4e8e-4a62-9a33-797827a75f55",
    "card_type": null,
    "created_at": "2026-09-07T10:03:39.974Z",
    "description": "Cash / BSP settlement",
    "expiry_month": null,
    "expiry_year": null,
    "fop_code": "1",
    "fop_type": "cash",
    "gds_alias": null,
    "gds_entry_id": "f8e8b856-8db5-4e1c-a0a5-2ebd8fcce670",
    "id": "fe7e1613-6ea6-451d-9f57-442de9fe7e1c",
    "is_default": false,
    "label": "AMEX_BCG_FOP_LIQUID",
    "last4": null,
    "notes": null,
    "owner_client_id": null,
    "owner_employee_id": null,
    "payer": "agency",
    "payment_type_id": null,
    "rbd_spec": "Y",
    "status": "active",
  },
  "ok": true,
}
`;
